<resources>
    <string name="app_name">MostPopularOne</string>
    <string name="content">Synth polaroid bitters chillwave pickled. Vegan disrupt tousled, Portland keffiyeh aesthetic food truck sriracha cornhole single-origin coffee church key roof party. Leggings ethical McSweeney\'s, normcore you probably haven\'t heard of them Marfa organic squid.</string>
    <string name="comment">14 COMMENTS</string>
    <string name="time_date">16 MAY 2016</string>
    <string name="title">Tousled food truck polaroid salvia</string>
    <string name="local">San Fransisco, CA</string>
    <string name="nick_name">Harriet Welsch</string>
</resources>
