<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="164dp"
        android:text="Most Popular"
        android:textColor="#ffffff"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="HardcodedText" />

    <Button
        android:id="@+id/button"
        android:layout_width="34dp"
        android:layout_height="21dp"
        android:layout_marginStart="11dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/menu"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="52dp"
        android:layout_height="52dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="179dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@drawable/avatar"
        android:contentDescription="TODO"
        tools:ignore="ContentDescription,HardcodedText" />

    <TextView
        android:letterSpacing="-0.02"
        android:fontFamily="sans-serif-light"
        android:textColor="#ffffff"
        android:id="@+id/nick_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="187dp"
        android:text="@string/nick_name"
        android:textSize="17sp"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:textStyle="bold"
        android:fontFamily="sans-serif-light"
        android:textColor="#c7c7cd"
        android:id="@+id/local"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="1dp"
        android:text="@string/local"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/nick_name" />

    <TextView
        android:id="@+id/large_content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="77dp"
        android:fontFamily="sans-serif-light"
        android:letterSpacing="-0.03"
        android:lineSpacingExtra="12sp"
        android:text="@string/title"
        android:textColor="#ffffff"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/local" />

    <TextView
        android:textColor="#b8e986"
        android:id="@+id/description_first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="TRAVELLING"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/large_content"
        tools:ignore="HardcodedText" />

    <TextView
        android:fontFamily="sans-serif-light"
        android:textColor="#c7c7cd"
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="108dp"
        android:layout_marginTop="10dp"
        android:text="@string/time_date"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/large_content" />

    <TextView
        android:letterSpacing="-0.02"
        android:lineSpacingExtra="7sp"
        android:id="@+id/textView7"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="55dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/content"
        android:textColor="#ffffff"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/time" />

    <TextView
        android:letterSpacing="0.17"
        android:id="@+id/textView8"
        android:layout_width="43dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginTop="48dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/comment"
        android:textColor="#c7c7cd"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        tools:ignore="SmallSp" />

    <Button
        android:textColor="#4a4a4a"
        android:id="@+id/button2"
        android:layout_width="204dp"
        android:layout_height="43.1dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="43dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/box"
        android:drawableEnd="@drawable/ic_vector"
        android:drawablePadding="-34dp"
        android:paddingEnd="47dp"
        android:text="READ ARTICLE"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        tools:ignore="HardcodedText,RtlSymmetry" />

    <Button
        android:id="@+id/button5"
        android:layout_width="24dp"
        android:layout_height="5.3dp"
        android:layout_marginTop="62dp"
        android:layout_marginEnd="26dp"
        android:background="@drawable/ic_dot_3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />


</androidx.constraintlayout.widget.ConstraintLayout>